- Fixed compiler warning "no previous prototype for function" by
  moving includes to the top of the file.
- Fixed compiler warnings "implicit conversion changes signedness" 
  and "comparison of integers of different signs" by consistenly
  using the type unsigned long in qsort helper functions.
- Moved function CompareFrequency to file anagram.c, added
  declaration for it in file anagram_compare.h and included it in
  anagram_stdlib.h.
- Fixed compiler warning "no previous extern declaration for 
  non-static variable" by adding forward declarations.
- Fixed compiler warning "macro is not used" by removing unused
  macros MAXWORDS and i2ch.
- Replaced macro ch2i by proper function.
- Fixed compiler warning "array subscript is of type 'char' in
  function CompareFrequency.
- Fixed compiler warning "unused variable" by removing variable i
  in function Reset.
- Fixed compiler warning "no previous extern declaration for 
  non-static variable" by making global variables in file 
  anagram.c static.
- Replaced macro lPhrase by its expansion.
- Fixed compiler warnings "implicit conversion loses integer 
  precision" and "implicit conversion changes signedness" by
  adding explicit casts or using the appropriate type for local
  variables.
- Fixed compiler warning "array subscript is of type 'char'" by
  changing type of some local variables as well as of global
  variable achByFrequency to int.
- Changed all //-style comments to /* */-style comments.
- Moved contents of wccmalloc.c to anagram_stdlib.c.
- Renamed input.c to anagram_input.c.
- Renamed wccctype.h to anagram_ctype.h.
- Renamed wccstdlib.c to anagram_stdlib.c.
- Renamed wccstdlib.h to anagram_stdlib.h.
- Renamed wccmalloc.h to anagram_strings.h.
- Applied TACLeBench formatting rules via
  astyle --options=doc/example/astylerc.txt
- Tested conformance to C99 via
  clang -fsyntax-only -Weverything -Wno-unknown-pragmas -Wno-padded -pedantic -std=c99

2017-06-27
- Remove static declarations.